[package]
name = "dynamic-state-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
strum = "0.26"
strum_macros = "0.26"
regex = "1.10"

serde_plain = "1.0.2"
reqwest = "0.12.12"
